add the navber html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="assets/src/css/media.css">
 </head>
 <body>
+    
+    <!-- Navbar -->
+
+    <nav class="flex">
+        <img src="assets/images/logo.png" alt="" />
+        <input type="checkbox" hidden id="menu-check" />
+        <label for="menu-check">
+          <i class="fa-solid fa-bars open"></i>
+          <i class="fa-solid fa-close close"></i>
+        </label>
+        <ul class="flex">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#featured">Featured</a></li>
+          <li><a href="#arrival">Arrivals</a></li>
+          <li><a href="#reviews">Reviews</a></li>
+          <li><a href="#blog">Blog</a></li>
+        </ul>
+        <div class="flex">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-heart"></i>
+        </div>
+      </nav>
   
 </body>
 </html>
