add the header section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
           <i class="fa-solid fa-heart"></i>
         </div>
       </nav>
+
+      <!-- header section -->
+    <header id="home">
+
+      <div class="container flex">
+        <div>
+          <h1>welcome to <span>book store</span></h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae non
+            dignissimos cupiditate maiores quibusdam voluptas et nihil eaque
+            maxime quasi saepe nemo molestias aperiam veritatis porro ad esse
+            commodi itaque doloremque, magnam ducimus excepturi. In pariatur
+            praesentium deserunt repellat temporibus.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <img src="assets/images/table.png" alt="">
+      </div>
+
+    </header>
   
 </body>
 </html>
