--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
       </div>
 
     </header>
+    <main>
+      <!-- boxes section -->
+
+      <section class="boxes">
+        <div class="container flex">
+          <div class="box">
+            <i class="fa-solid fa-truck-fast"></i>
+            <h3>Fast Delivery</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-headset"></i>
+            <h3>24 x 7 Services</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-tag"></i>
+            <h3>Best Deal</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-lock"></i>
+            <h3>Secure Payment</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+        </div>
+              
+    
+      </section>
+  
+    </main>
   
 </body>
 </html>
