edit digiteal section

--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
          
 
           <section class="digitalBook">
+            <img src="assets/images/banner.jpg" alt="" >
              <a href="#">Learn More</a>
           </section>
 
